# minicode

./: README.md  pyproject.toml
src/: agent.py  constants.py  tools.py  utils.py
src/minicode/: __init__.py  agent.py  constants.py  rich_text_service.py  tools.py  utils.py
