[project]
name = "minicode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "samiu11ah", email = "msamiullah295@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.11",
    "python-dotenv>=1.2.2",
]

[project.scripts]
minicode = "minicode:main"

[project.optional-dependencies]
deepseek = [
    "langchain-deepseek>=1.1.0",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12.0"]
build-backend = "uv_build"
